--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -72,10 +72,12 @@
 
 @layer base {
   * {
-    @apply border-border;
+    @apply border-black dark:border-white;
   }
   body {
     @apply bg-background text-foreground;
-    font-feature-settings: "rlig" 1, "calt" 1;
+    font-feature-settings:
+      "rlig" 1,
+      "calt" 1;
   }
 }
